Ajustes para cambiar los portales mostrados en una grilla 2x2 y las imagenes en resoluciones similares

--- a/index2.html
+++ b/index2.html
@@ -99,51 +99,64 @@
 			<div class="row text-center">
 				<div class="col-sm-12 text-center">
 					<div class="heading">
-						<h3><b>Portfolio</b></h3>
+						<h3><b>Portafolio</b></h3>
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-12">
 					<div class="row">
-						<div class="col-sm-4" style="padding: 15px;">
+						<div class="col-sm-6" style="padding: 15px;">
 							<h4>Conectala.com</h4>
 							<hr style="width: 90%; border: 1px solid #FFA804; margin-top: 2px;">
 							<p style="margin-top: -10px;">Colombian online store</p>
 							<br>
+							<div class="web-design col-sm-12">
+								<a href="images/conectala.jpg" data-fluidbox>
+									<img src="images/conectala.jpg" alt="" style="border: 1px solid #ccc;"></a>
+							</div>
 						</div>
-						<div class="col-sm-4" style="border-left: 1px solid #DEDEDE; padding: 15px;">
+						<div class="col-sm-6" style="border-left: 1px solid #DEDEDE; padding: 15px;">
 							<h4>Advance Group</h4>
 							<hr style="width: 90%; border: 1px solid #FFA804; margin-top: 2px;">
 							<p style="margin-top: -10px;">Colombian company which offers technological services</p>
-						</div><div class="col-sm-4" style="border-left: 1px solid #DEDEDE; padding: 15px;">
+							<br>
+							<div class="web-design col-sm-12">
+								<a href="images/advance.jpg" data-fluidbox>
+									<img src="images/advance.jpg" alt="" style="border: 1px solid #ccc;">
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<br>
+				<div class="col-sm-12">
+					<div class="row">
+						<div class="col-sm-6" style="padding: 15px;">
 							<h4>Remesas.cl</h4>
 							<hr style="width: 90%; border: 1px solid #FFA804; margin-top: 2px;">
 							<p style="margin-top: -10px;">Chilean website for sending remittances</p>
+							<br>
+							<div class="web-design col-sm-12">
+								<a href="images/remesas.jpg" data-fluidbox>
+									<img src="images/remesas.jpg" alt="" style="border: 1px solid #ccc;"></a>
+							</div>
+						</div>
+						<div class="col-sm-6" style="border-left: 1px solid #DEDEDE; padding: 15px;">
+							<h4>Empleate.com</h4>
+							<hr style="width: 90%; border: 1px solid #FFA804; margin-top: 2px;">
+							<p style="margin-top: -10px;">Venezuelan company on HR management services</p>
+							<br>
+							<div class="web-design col-sm-12">
+								<a href="images/empleate.jpg" data-fluidbox>
+									<img src="images/empleate.jpg" alt="" style="border: 1px solid #ccc;"></a>
+							</div>
 						</div>
 					</div>
 				</div><!-- col-sm-8 -->
 			</div><!-- row -->
 		</div><!-- container -->
-		
-		<div class="container">
-			<div class="row">
-			<div class="p-item web-design col-sm-4">
-				<a href="images/screenshot-conectala.jpg" data-fluidbox>
-					<img src="images/screenshot-conectala.jpg" alt=""></a>
-			</div>
-			
-			<div class="p-item branding graphic-design col-sm-4">
-				<a href="images/screenshot-advance-1.jpg" data-fluidbox>
-					<img src="images/screenshot-advance-1.jpg" alt="" style="box-shadow: 1px 1px 1px 1px #ccc;"></a>
-			</div>
-			
-			<div class="p-item web-design col-sm-4">
-				<a href="images/screenshot-remesas.jpg" data-fluidbox>
-					<img src="images/screenshot-remesas.jpg" alt=""></a>
-			</div>
-		</div>
-		</div><!-- portfolioContainer -->
 		<br>
-	</section><!-- portfolio-section -->
+	</section>
+	<!-- portfolio-section -->
 	
 	<section class="about-section section" style="background-color: #F0F0F0;">
 		<div class="container">
