Adding Codepen Profile Link

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 						<ul class="social-icons">
 							<li><a href="https://www.linkedin.com/in/rsosacar/" target="_blank"><i class="ion-social-linkedin"></i></a></li>
 							<li><a href="https://github.com/rsosacar"><i class="ion-social-github"></i></a></li>
+							<li><a href="https://codepen.io/rsosacar"><i class="ion-social-codepen"></i></a></li>
 						</ul>
 						
 						<div style="padding-bottom: 5px;">
