--- a/index.html
+++ b/index.html
@@ -435,13 +435,13 @@
 					</div>
 				</div>
 			
-				<div class="col-sm-12 col-md-6">
+				<div class="col-sm-12 col-md-6" style="margin-bottom: 15px;">
 					<h4><b>Responsive Web Design</b></h4>
 					<hr style="width:90%; border:1px solid #FFAB00;"/>
 					<h6 class="font-lite-black margin-t-5">freeCodeCamp | 2019</h6>
 				</div>
 			
-				<div class="col-sm-12 col-md-6">
+				<div class="col-sm-12 col-md-6" style="margin-bottom: 15px;">
 					<h4><b>Certified Linux Administrator</b></h4>
 					<hr style="width:90%; border:1px solid #FFAB00;"/>
 					<h6 class="font-lite-black margin-t-5">Latinux | 2018</h6>
