Adding new websites and mobile apps to portfolio

--- a/index2.html
+++ b/index2.html
@@ -152,7 +152,48 @@
 							</div>
 						</div>
 					</div>
-				</div><!-- col-sm-8 -->
+				</div>
+				<br>
+				<div class="col-sm-12">
+					<div class="row">
+						<div class="col-sm-6" style="padding: 15px;">
+							<h4>Rob-Ox.com</h4>
+							<hr style="width: 90%; border: 1px solid #FFA804; margin-top: 2px;">
+							<p style="margin-top: -10px;">Personal training system</p>
+							<br>
+							<div class="web-design col-sm-12">
+								<a href="images/rob-ox.jpg" data-fluidbox>
+									<img src="images/rob-ox.jpg" alt="" style="border: 1px solid #ccc;"></a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<br>
+				<div class="col-sm-12 text-center">
+					<h4><b>Mobile Apps</b></h4>
+				</div>
+				<br>
+				<div class="col-sm-12">
+					<div class="row">
+						<div class="col-sm-6" style="padding: 15px;">
+							<h4>Empleate</h4>
+							<hr style="width: 90%; border: 1px solid #FFA804; margin-top: 2px;">
+							<p style="margin-top: -10px;">Empleate.com's Android App</p>
+							<br>
+							<div class="web-design col-sm-12">
+								<div class="col-sm-6" style="display:inline-block;float:left;">
+								<a href="images/app-empleate-1.webp" data-fluidbox>
+									<img src="images/app-empleate-1.webp" alt="" style="border: 1px solid #ccc;"></a>
+								</div>
+								<div class="col-sm-6" style="display:inline-block;float:right;">
+								<a href="images/app-empleate-2.webp" data-fluidbox>
+									<img src="images/app-empleate-2.webp" alt="" style="border: 1px solid #ccc;"></a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- col-sm-8 -->
 			</div><!-- row -->
 		</div><!-- container -->
 		<br>
